--- a/ShoppingProject/templates/index.html
+++ b/ShoppingProject/templates/index.html
@@ -26,265 +26,60 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
       </style>
   <body >
   <br>
-<div >
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+<div align="center">
     {% include 'nabs.html' %}
 </div>
-<br><br>
+  <pre>
+
+  </pre>
 <!-- /hero area-->
 <div align="left" >
     <h3 style="font-family: 'Tempus Sans ITC';color: black"><b>Who We Are...!!</b></h3><br>
     <p style="font-family: 'French Script MT';font-size: 30px;color: red" >&nbsp;&nbsp;&nbsp;Quick Shoppiee is a Hyderabad e-commerce company headquartered in<br><br> &nbsp;&nbsp;&nbsp; Hyderbad & Vizag, Ts & Ap, India.The company initially focused <br><br> &nbsp;&nbsp;&nbsp;on Clothing, before expanding into other product categories such as Formals,<br><br>&nbsp;&nbsp;&nbsp; Suites, Men & Ladies Kurthas , Sariees,Ladies Dresses,Shoes,Bags,Watches, and lifestyle products.</p>
 </div>
+<br><br>
 
-<div align="center">
-    {% include 'formen.html' %}
-</div>
+  <div align="center">
+      {%  include 'formen.html' %}
+  </div>
+
+  <br><br>
+
+    <div align="center">
+      {%  include 'womencategiresi.html' %}
+  </div>
+
+<br><br>
+  <div align="center">
+{%  include 'deal.html' %}
+  </div>
+<br><br><br>
 <!-- /categories -->
 
+  <div align="center">
+{%  include 'season sale.html' %}
+  </div>
+
+  <br><br><br>
+    <div align="center">
+{%  include 'newsletter.html' %}
+  </div>
+        <br><br><br>
+    <div align="center">
+{%  include 'freeshipping.html' %}
+  </div>
+
+
+      <br><br><br>
+    <div align="center">
+{%  include 'finallogo.html' %}
+  </div>
 
 <!-- /deal -->
-
-  <div align="left">
-      <div class="col-lg-12 text-center">
-          <h2 class="section-title"><span style="color: black">Top Categories For WoMen</span></h2>
-      </div><br>
-
-      <div class="row">
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
-            <div class="instagram-post mx-2"><a href="{% url 'women_menu' %}" ><img class="img-fluid w-100" src="/static/images/instagram/item-1.png" alt="instagram-image"></a>
-            <ul class="list-inline text-center">
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
-          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-2.png" alt="instagram-image">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
-          <div class="instagram-post mx-2"><img class="img-fluid w-100"   src="{% static 'images/ksssssssssssssss.jpg' %}" alt="instagram-image">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
-          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-4.png" alt="instagram-image">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
-          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-5.png" alt="instagram-image">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
-          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-6.png" alt="instagram-image">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- /without instagram image -->
-  </div>
-</section>
-  <br><br>
-<!-- /instagram -->
-<section class="section overlay cta" data-background="/static/images/backgrounds/cta.jpg" style="background-image: url(&quot;/static/images/backgrounds/cta.jpg&quot;);">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="text-white mb-2">End of Season Sale</h1>
-        <p class="text-white mb-4">Take 25% off all sweaters and knits. Discount applied at checkout.</p>
-        <a href="shop.html" class="btn btn-light">shop now</a>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- service -->
-  <br><br>
-
-
-
-  <section class="section bg-cover" data-background="/static/images/backgrounds/deal.jpg" style="background-image: url(&quot;/static/images/backgrounds/deal.jpg&quot;);">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 text-center text-md-left mb-4 mb-md-0">
-        <h1>Deal of the day</h1>
-        <h4 class="mb-40">Get at discounted price!</h4>
-        <!-- syo-timer -->
-        <div class="syotimer large">
-          <div id="simple-timer" data-year="2019" data-month="12" data-day="1" data-hour="1" class="syotimer"><div class="syotimer__head"></div><div class="syotimer__body"><p style="font-size: 1.2em;">The countdown is finished!</p></div><div class="syotimer__footer"></div></div>
-        </div>
-        <a href="shop.html" class="btn btn-primary">shop now</a>
-      </div>
-      <div class="col-md-6 text-center text-md-left align-self-center">
-        <img src="/static/images/deal/product.png" alt="product-img" class="img-fluid up-down">
-      </div>
-    </div>
-  </div>
-</section>
-<br><br>
-<!-- /newsletter -->
-<section class="section-sm border-top">
-  <div class="container">
-    <div class="row">
-      <!-- service item -->
-      <div class="col-lg-3 col-sm-6 mb-4 mb-lg-0">
-        <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
-          <i class="ti-truck icon-lg mr-4 mb-3 mb-sm-0"></i>
-          <div class="text-center text-sm-left">
-            <h4><img src="{% static 'delivery-truck.png' %}" width="50px" height="50px">&nbsp;&nbsp;Free Shipping</h4>
-            <p class="mb-0 text-gray">Free shipping on oder over $70</p>
-          </div>
-        </div>
-      </div>
-      <!-- service item -->
-      <div class="col-lg-3 col-sm-6 mb-4 mb-lg-0">
-        <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
-          <i class="ti-shield icon-lg mr-4 mb-3 mb-sm-0"></i>
-          <div class="text-center text-sm-left">
-            <h4><img src="{% static 'secure-payment.png' %}" width="50px" height="50px">&nbsp;&nbsp;Secure Payment</h4>
-            <p class="mb-0 text-gray">We ensure secure payment with PEV</p>
-          </div>
-        </div>
-      </div>
-      <!-- service item -->
-      <div class="col-lg-3 col-sm-6 mb-4 mb-lg-0">
-        <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
-          <i class="ti-timer icon-lg mr-4 mb-3 mb-sm-0"></i>
-          <div class="text-center text-sm-left">
-            <h4><img src="{% static 'clock.png' %}" width="50px" height="50px">&nbsp;&nbsp;Support 24/7</h4>
-            <p class="mb-0 text-gray">Contact us 24 hours a day, 7 days a week</p>
-          </div>
-        </div>
-      </div>
-      <!-- service item -->
-      <div class="col-lg-3 col-sm-6 mb-4 mb-lg-0">
-        <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
-          <i class="ti-reload icon-lg mr-4 mb-3 mb-sm-0"></i>
-          <div class="text-center text-sm-left">
-            <h4><img src="{% static 'return.png' %}" width="50px" height="50px">&nbsp;&nbsp;30 Days Return</h4>
-            <p class="mb-0 text-gray">Simply return it within 30 days for an exchange.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Newsletter Modal -->
-<section class="section bg-gray">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-title">Our Newsletter</h2>
-        <p class="mb-4">Subscribe to our Newsletter to receive early discount offers</p>
-      </div>
-      <div class="col-lg-6 col-md-8 col-sm-9 col-10 mx-auto">
-        <form action="#" class="d-flex flex-column flex-sm-row">
-          <input type="email" class="form-control rounded-0 border-0 mr-3 mb-4 mb-sm-0" id="mail" placeholder="Enter your email">
-          <button type="submit" value="send" class="btn btn-primary">Subscribe</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /Newsletter Modal -->
-
-
-<!-- footer -->
-  <br>
-<footer class="bg-light">
-  <div class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-          <h4 class="mb-4">Contact</h4>
-          <p>20464 Hirthe Curve Suite, Emardton, CT 12471-4107</p>
-          <p>+5(305) 785-0437</p>
-          <p>info@example.com</p>
-          <ul class="list-inline social-icons">
-            <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="ti-vimeo-alt"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="ti-google"></i></a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-          <h4 class="mb-4">Category</h4>
-          <ul class="pl-0 list-unstyled">
-            <li class="mb-2"><a class="text-color" href="shop.html">Men</a></li>
-            <li class="mb-2"><a class="text-color" href="shop.html">Women</a></li>
-            <li class="mb-2"><a class="text-color" href="shop.html">Kids</a></li>
-            <li class="mb-2"><a class="text-color" href="shop.html">Accessories</a></li>
-            <li class="mb-2"><a class="text-color" href="shop.html">Shoe</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-          <h4 class="mb-4">Useful Link</h4>
-          <ul class="pl-0 list-unstyled">
-            <li class="mb-2"><a class="text-color" href="about.html">News &amp; Tips</a></li>
-            <li class="mb-2"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-2"><a class="text-color" href="address.html">Support</a></li>
-            <li class="mb-2"><a class="text-color" href="shop.html">Our Shop</a></li>
-            <li class="mb-2"><a class="text-color" href="contact.html">Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 text-center text-sm-left">
-          <h4 class="mb-4">Our Policies</h4>
-          <ul class="pl-0 list-unstyled">
-            <li class="mb-2"><a class="text-color" href="404.html">Privacy Policy</a></li>
-            <li class="mb-2"><a class="text-color" href="404.html">Terms &amp; Conditions</a></li>
-            <li class="mb-2"><a class="text-color" href="404.html">Cookie Policy</a></li>
-            <li class="mb-2"><a class="text-color" href="404.html">Terms of Sale</a></li>
-            <li class="mb-2"><a class="text-color" href="dashboard.html">Free Shipping &amp; Returns</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-    <br>
-  <div class="bg-dark py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5 text-center text-md-left mb-4 mb-md-0 align-self-center">
-          <p class="text-white mb-0">Logo © 2018 all right reserved</p>
-        </div>
-        <div class="col-md-2 text-center text-md-left mb-4 mb-md-0">
-          <img src="/static/images/logo-alt.png" alt="logo">
-        </div>
-        <div class="col-md-5 text-center text-md-right mb-4 mb-md-0">
-          <ul class="list-inline">
-            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-1.jpg" alt="card"></li>
-            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-2.jpg" alt="card"></li>
-            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-3.jpg" alt="card"></li>
-            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-4.jpg" alt="card"></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!-- /footer -->
-
-</div>
-
 
 
     <!-- Optional JavaScript; choose one of the two! -->
