--- a/ShoppingProject/templates/nabs.html
+++ b/ShoppingProject/templates/nabs.html
@@ -96,7 +96,9 @@
       </li>
         {% endif %}
 
-
+ <li class="nav-item">
+        <a class="nav-link" href="{% url 'developer' %}" tabindex="-1" >Developers Blog</a>
+      </li>
 
     </ul>
     <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="post">
