--- a/ShoppingProject/templates/shipping.html
+++ b/ShoppingProject/templates/shipping.html
@@ -46,7 +46,7 @@ background: no-repeat center center fixed ;
   <div class="container">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-        <li class="breadcrumb-item"><a href="">DashBoard</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">DashBoard</a></li>
         <li class="breadcrumb-item"><a href="">Shipping</a></li>
     </ol>
   </div>
@@ -85,6 +85,11 @@ background: no-repeat center center fixed ;
     </ul>
   </div>
 </nav>
+<pre>
+
+
+</pre>
+<h3 align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shippings</h3><br><br>
 
 
     <div align="center">
