--- a/ShoppingProject/templates/profile.html
+++ b/ShoppingProject/templates/profile.html
@@ -46,7 +46,7 @@ background: no-repeat center center fixed ;
   <div class="container">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-        <li class="breadcrumb-item"><a href="">DashBoard</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">DashBoard</a></li>
         <li class="breadcrumb-item"><a href="">Profile</a></li>
     </ol>
   </div>
@@ -83,6 +83,7 @@ background: no-repeat center center fixed ;
 
 
 </pre>
+<h3 align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Profile</h3>
     {% for i in profile %}
 <table align="center">
     <tr>
@@ -90,15 +91,15 @@ background: no-repeat center center fixed ;
         <img src={{ i.image.url }} width="200"  style="border-radius: 6.0cm " height="200" >
     </th>
         <th>
-          {{ i.usr.username}}
+         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{ i.usr.username}}
             <table align="center">
                 <tr>
                     <th>
-                       {{ i.usr.email }}
+                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  {{ i.usr.email }}
                         <table align="center">
                             <tr>
                                   <th>
-                       {{ i.mobile }}
+                       {{ i.mobile }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </th>
                             </tr>
                         </table>
