updated with deals & season sales
updated with deals & season sales

--- a/ShoppingProject/templates/season sale.html
+++ b/ShoppingProject/templates/season sale.html
@@ -4,7 +4,7 @@
       <div class="col-lg-12 text-center">
         <h1 class="text-white mb-2">End of Season Sale</h1>
         <p class="text-white mb-4">Take 25% off all sweaters and knits. Discount applied at checkout.</p>
-        <a href="shop.html" class="btn btn-light">shop now</a>
+        <a href="{% url 'season_sale' %}" class="btn btn-light">shop now</a>
       </div>
     </div>
   </div>
