--- a/ShoppingProject/templates/view_cart.html
+++ b/ShoppingProject/templates/view_cart.html
@@ -12,6 +12,11 @@
 
 
 </pre>
+<div align="center">
+    {% if mseg %}
+        {{ mseg }}
+    {% endif %}
+</div>
 
 {% if request.user.is_authenticated %}
       <div class="cart">
