--- a/ShoppingProject/templates/deal.html
+++ b/ShoppingProject/templates/deal.html
@@ -8,7 +8,7 @@
         <div class="syotimer large">
           <div id="simple-timer" data-year="2019" data-month="12" data-day="1" data-hour="1" class="syotimer"><div class="syotimer__head"></div><div class="syotimer__body"><p style="font-size: 1.2em;">The countdown is finished!</p></div><div class="syotimer__footer"></div></div>
         </div>
-        <a href="shop.html" class="btn btn-primary">shop now</a>
+        <a href="{% url 'deal_day' %}" class="btn btn-primary">shop now</a>
       </div>
       <div class="col-md-6 text-center text-md-left align-self-center">
         <img src="/static/images/deal/product.png" alt="product-img" class="img-fluid up-down">
